--- a/src/getting-started_test.Rmd
+++ b/src/getting-started_test.Rmd
@@ -2,7 +2,7 @@
 title: "Getting started"
 author: "Steve Simon"
 date: "August 23, 2018"
-output: ioslides_presentation
+output: powerpoint_presentation
 ---
 
 ```{r setup, include=FALSE}
@@ -13,9 +13,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ## Course instructor, Steve Simon
 
-![](~/introduction-to-SAS/images/SteveSimonPic.jpg)
-
-These slides were printed on `r Sys.time()`.
+![](../images/SteveSimonPic2.jpg)
 
 <div class="notes">
 
@@ -25,7 +23,7 @@ Greetings! My name is Steve Simon and I am the instructor for the class, MEDB 55
 
 - - -
 
-![](~/introduction-to-SAS/images/virtualbox.png)
+![](../images/virtualbox.png)
 
 
 <div class="notes">
@@ -40,7 +38,7 @@ http://support.sas.com/software/products/university-edition/docs/en/SASUniversit
 
 - - -
 
-![](~/introduction-to-SAS/images/virtualbox2.png)
+![](../images/virtualbox2.png)
 
 
 <div class="notes">
@@ -51,7 +49,7 @@ Click on the SAS University Edition tab and a new window opens up. It explains t
 
 - - -
 
-![](~/introduction-to-SAS/images/virtualbox3.png)
+![](../images/virtualbox3.png)
 
 
 <div class="notes">
@@ -62,7 +60,7 @@ When you open your web browser to http://localhost:10080, you get the option of 
 
 - - -
 
-![](~/introduction-to-SAS/images/sas-university-startup.png)
+![](../images/sas-university-startup.png)
 
 
 <div class="notes">
@@ -73,7 +71,7 @@ When you open your web browser to http://localhost:10080, you get the option of 
 
 
 
-![](~/introduction-to-SAS/images/opening-screen.png)
+![](../images/opening-screen.png)
 
 
 <div class="notes">
@@ -84,7 +82,7 @@ If you are running the "regular" version of SAS, here's an image of what the ope
 
 - - -
 
-![](~/introduction-to-SAS/images/program-editor.png)
+![](../images/program-editor.png)
 
 
 <div class="notes">
@@ -95,7 +93,7 @@ This is the program editor window. You type in your program in this window, or r
 
 - - -
 
-![](~/introduction-to-SAS/images/test-program1.png)
+![](../images/test-program1.png)
 
 
 <div class="notes">
@@ -130,7 +128,7 @@ After you type this program in, click on FILE | SAVE and store your program some
 
 - - -
 
-![](~/introduction-to-SAS/images/log-window1.png)
+![](../images/log-window1.png)
 
 
 <div class="notes">
@@ -141,7 +139,7 @@ The font here is a bit small, but notice that there are no red messages indicati
 
 - - -
 
-![](~/introduction-to-SAS/images/log-window2.png)
+![](../images/log-window2.png)
 
 
 <div class="notes">
@@ -208,7 +206,7 @@ There are additional options for storing graphics, which I will talk about later
 
 - - -
 
-![](~/introduction-to-SAS/images/preferences-results-window.png)
+![](../images/preferences-results-window.png)
 
 <div class="notes">
 
@@ -218,7 +216,7 @@ Click on the CREATE LISTING option box to send the output to the output window. 
 
 - - -
 
-![](~/introduction-to-SAS/images/output-window.png)
+![](../images/output-window.png)
 
 <div class="notes">
 
@@ -228,7 +226,7 @@ Here's what the output window looks like. Notice that SAS uses a monospaced font
 
 - - -
 
-![](~/introduction-to-SAS/images/output-html.png)
+![](../images/output-html.png)
 
 <div class="notes">
 
@@ -238,7 +236,7 @@ Here's what the html output looks like. Notice variety of font sizes and colors.
 
 - - -
 
-![](~/introduction-to-SAS/images/sas-university-program.png)
+![](../images/sas-university-program.png)
 
 <div class="notes">
 
@@ -248,15 +246,17 @@ You will notice a slightly different appearance with SAS University. Here is the
 
 - - -
 
-![](~/introduction-to-SAS/images/sas-university-log.png)
+![](../images/sas-university-log.png)
 
 <div class="notes">
 
 Here is the log window. Notice that the counts for errors, warnings, and notes appear at the top, and a missing count means zero errors and zero warnings. Hooray!
 
+</div>
+
 - - -
 
-![](~/introduction-to-SAS/images/sas-university-results.png)
+![](../images/sas-university-results.png)
 
 <div class="notes">
 
