--- a/src/getting-started.Rmd
+++ b/src/getting-started.Rmd
@@ -9,8 +9,17 @@ output: ioslides_presentation
 # I will not use too much R in a class called "Introduction to SAS,"
 # but am including this chunk just in case I need something from R.
 knitr::opts_chunk$set(echo = FALSE)
+require(SASmarkdown)
+saslog_hookset("source")
+sasexe <- "C:/Program Files/SASHome/SASFoundation/9.4/sas.exe"
+sasopts <- "-nosplash -ls 75"
 ```
 
+# Then set up SAS code chunks with
+```{r, engine="saslog", engine.path=sasexe, engine.opts=sasopts, SASecho=FALSE}
+proc means data=sashelp.class;
+run;
+```
 ## Course instructor, Steve Simon
 
 ![](~/introduction-to-SAS/images/SteveSimonPic.jpg)
@@ -106,7 +115,7 @@ Here's a simple test program. After you type this program in, click on FILE | SA
 
 ## Test program
 
-```{sas, eval=FALSE, echo=TRUE}
+```
 data test_example;
  input x y;
  cards;
