Nice format for consulting bibliography

--- a/part0/doc/broman2013.bib
+++ b/part0/doc/broman2013.bib
@@ -2,5 +2,6 @@
 author = {Kenneth Broman},
 title = {Thoughts on statistical consulting},
 blog = {The stupidest thing...},
-url = {https://kbroman.wordpress.com/2013/04/02/thoughts-on-statistical-consulting/}
+html = {https://kbroman.wordpress.com/2013/04/02/thoughts-on-statistical-consulting/},
+pdf = {}
 }
