--- a/part0/doc/kirk1991.bib
+++ b/part0/doc/kirk1991.bib
@@ -10,5 +10,6 @@
  title = {Statistical Consulting in a University: Dealing with People and Other Challenges},
  volume = {45},
  year = {1991},
+ html = {},
  pdf = {https://www.jstor.org/stable/pdf/2685235.pdf}
 }
