--- a/part0/doc/legler2010.bib
+++ b/part0/doc/legler2010.bib
@@ -10,5 +10,6 @@
  title = {A Model for an Interdisciplinary Undergraduate Research Program},
  volume = {64},
  year = {2010},
+ html = {}, 
  pdf = {https://www.jstor.org/stable/pdf/25652349.pdf}
 }
