--- a/part0/doc/matloff2014.bib
+++ b/part0/doc/matloff2014.bib
@@ -5,5 +5,6 @@
   volume = {449},
   pages = {25},
   year = {2014},
-  html = {https://magazine.amstat.org/blog/2014/11/01/statistics-losing-ground-to-computer-science/}
+  html = {https://magazine.amstat.org/blog/2014/11/01/statistics-losing-ground-to-computer-science/},
+  pdf = {}
 }
