--- a/part0/doc/mcculloch1985.bib
+++ b/part0/doc/mcculloch1985.bib
@@ -10,5 +10,6 @@
  title = {An Expanded Approach to Educating Statistical Consultants},
  volume = {39},
  year = {1985},
+ html = {}, 
  pdf = {https://www.jstor.org/stable/pdf/2683923.pdf}
 }
