--- a/part0/doc/niu2016.bib
+++ b/part0/doc/niu2016.bib
@@ -1,7 +1,8 @@
 @article{niu2016,
-author = {Ziaoyue Maggie Niu},
-title = {My Life as a Statistical Consultant: JSM 2016 Invited Panel Discussion},
-journal = {Amstat News}, 
-year = {2016 (1 October)},
-url = {https://magazine.amstat.org/blog/2016/10/01/my-life-as-a-statistical-consultant-jsm-2016-invited-panel-discussion/}
+  author = {Ziaoyue Maggie Niu},
+  title = {My Life as a Statistical Consultant: JSM 2016 Invited Panel Discussion},
+  journal = {Amstat News}, 
+  year = {2016 (1 October)},
+  html = {https://magazine.amstat.org/blog/2016/10/01/my-life-as-a-statistical-consultant-jsm-2016-invited-panel-discussion/},
+  pdf = {}
 }
