--- a/part0/doc/vance2014a.bib
+++ b/part0/doc/vance2014a.bib
@@ -5,5 +5,6 @@
   volume = {30},
   pages = {7-12},
   year = {2014},
+  html = {},
   pdf = {https://higherlogicdownload.s3.amazonaws.com/AMSTAT/f6e8f6fd-6343-44e2-aa52-8b4e405c5457/UploadedFiles/StatisticalConsultant_v30no3.pdf}
 }
