--- a/part0/doc/vance2015.bib
+++ b/part0/doc/vance2015.bib
@@ -10,5 +10,6 @@
   doi = {10.1080/00031305.2015.1033990},
   URL = {https://doi.org/10.1080/00031305.2015.1033990},
   eprint = {https://doi.org/10.1080/00031305.2015.1033990},
+  html = {},
   pdf = {https://www.tandfonline.com/doi/abs/10.1080/00031305.2015.1033990}
 }
